profilelist1exp/unpackaged/objects/Agenda_Content__c.object
<CustomObject>
    <description>BOLT &amp; GSL project</description>
    <fields>
        <fullName>AE_Questions_Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>AE Questions Active?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AE_Questions__c</fullName>
        <label>AE Questions</label>
        <length>3000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Analyst_Questions_Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Analyst Questions Active?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Analyst_Questions__c</fullName>
        <label>Analyst Questions</label>
        <length>3000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Apply_to_Site__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Apply to Site</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Event_Location__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>Sites</value>
            </filterItems>
            <filterItems>
                <field>Event_Location__c.Active__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Event_Location__c</referenceTo>
        <relationshipLabel>Site Topics&amp;Breaks</relationshipLabel>
        <relationshipName>Agenda_Content</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Break_Type__c</fullName>
        <label>Break Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Catering</fullName>
                </value>
                <value>
                    <fullName>Travel</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Duration_minutes__c</fullName>
        <label>Duration (minutes)</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Engagement_Type__c</fullName>
        <label>Engagement Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>DSC</fullName>
                    <default>true</default>
                    <label>DSC</label>
                </value>
                <value>
                    <fullName>EBC</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Event_Type__c</fullName>
        <description>for specifying DSC event type for the subject</description>
        <label>Event Type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <controllingField>Engagement_Type__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Briefing</fullName>
                </value>
                <value>
                    <fullName>Tour</fullName>
                </value>
                <value>
                    <fullName>Architectural Design Session</fullName>
                </value>
                <value>
                    <fullName>Proof of Concept</fullName>
                </value>
                <value>
                    <fullName>Training</fullName>
                </value>
                <value>
                    <fullName>Marketing &amp; Analyst Events</fullName>
                </value>
                <value>
                    <fullName>Internal Engagements</fullName>
                </value>
                <value>
                    <fullName>Field Briefing</fullName>
                </value>
                <value>
                    <fullName>Meeting</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Price__c</fullName>
        <label>Price</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Select_Subject__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Subject</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Agenda_Content__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>Subject</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Agenda_Content__c</referenceTo>
        <relationshipLabel>Topics</relationshipLabel>
        <relationshipName>Subjects_Topics</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sites__c</fullName>
        <inlineHelpText>Select the sites in which this topic is applicable</inlineHelpText>
        <label>Apply to Sites</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Site1</fullName>
                </value>
                <value>
                    <fullName>Site 2</fullName>
                </value>
                <value>
                    <fullName>Round Rock</fullName>
                </value>
                <value>
                    <fullName>China Customer Briefing Centers</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Start_Time__c</fullName>
        <label>Start Time</label>
        <type>DateTime</type>
    </fields>
    <label>Agenda Content</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Breaks</fullName>
        <columns>NAME</columns>
        <columns>Engagement_Type__c</columns>
        <columns>Apply_to_Site__c</columns>
        <columns>Active__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Agenda_Content__c.Breaks</value>
        </filters>
        <label>Breaks</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>DSC_Agenda_Content</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>Event_Type__c</columns>
        <columns>Select_Subject__c</columns>
        <columns>Apply_to_Site__c</columns>
        <columns>Active__c</columns>
        <columns>Engagement_Type__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Engagement_Type__c</field>
            <operation>equals</operation>
            <value>DSC</value>
        </filters>
        <label>DSC Agenda Content</label>
        <language>en_US</language>
        <sharedTo>
            <group>DellSolutionCentersStaff</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>EBC_Agenda_Content</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>Event_Type__c</columns>
        <columns>Select_Subject__c</columns>
        <columns>Apply_to_Site__c</columns>
        <columns>Active__c</columns>
        <columns>Engagement_Type__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Engagement_Type__c</field>
            <operation>equals</operation>
            <value>EBC</value>
        </filters>
        <label>EBC Agenda Content</label>
        <language>en_US</language>
        <sharedTo>
            <group>ExecutiveBriefingCenterStaff</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Subjects</fullName>
        <columns>NAME</columns>
        <columns>Engagement_Type__c</columns>
        <columns>Apply_to_Site__c</columns>
        <columns>Active__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Agenda_Content__c.Subject</value>
        </filters>
        <label>Subjects</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Topics</fullName>
        <columns>NAME</columns>
        <columns>Select_Subject__c</columns>
        <columns>Active__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Agenda_Content__c.Topic</value>
        </filters>
        <label>Topics</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Agenda Content</pluralLabel>
    <recordTypes>
        <fullName>Breaks</fullName>
        <active>true</active>
        <description>Select this for creating a new break</description>
        <label>Breaks</label>
    </recordTypes>
    <recordTypes>
        <fullName>Subject</fullName>
        <active>true</active>
        <description>Select this for creating a new subject</description>
        <label>Subject</label>
    </recordTypes>
    <recordTypes>
        <fullName>Topic</fullName>
        <active>true</active>
        <description>Select this for creating a new subtopic</description>
        <label>Topic</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>